Typed indices (#12)
* Tests for array prepend and index specification

* Prepend to arrays and structures

* Refactor to use array offset. Index types were more complex than was worth.

* Error indexing with wrong type

* Parentheses are not necessary for array offsets

* Colon after array offset. Compose offset arrays.

* Array offset in matching

* New jar